@@ -4,7 +4,10 @@ History of this buildout
 5.0.30 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Fix ``UnboundLocalError: local variable 'themes' referenced before
+  assignment``.  This is when exporting the subscribers of the MREvent
+  contenttype, via the 'export to excel' tab.
+  [maurits]
 
 
 5.0.29 (2014-10-07)
